# record_dll

libmp3lame/: VbrTag.c  id3tag.c  lame.c  lame.h  psymodel.c  tables.c
record_dll/: CLog.cpp  CLog.h  CMakeLists.txt  MD5.cpp  MD5.h  Readme.txt  SliceIdGenerator.cpp  SliceIdGenerator.h  Voice.cpp  Voice.h  listen.cpp  macro.h  recognize_baidu.cpp  recognize_xunfei.cpp  record_dll.cpp  record_dll.h  record_dll_global.h
